--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -9,7 +9,7 @@ body {
     background-color: #141922;
 }
   aside {
-      width: 18%;
+      width: 15%;
       height: 100vh;
       background-color: #000;
       position: fixed;
@@ -28,15 +28,16 @@ body {
       left: 0;
       bottom: 0;
       width: 100vw;
-      height: 80px;
+      height: 70px;
       background-color: #282828;
       z-index: 1;
   }
   main {
-      width: calc( 100vw - 18% );
-      height: calc( 100vh - 80px );
+      width: calc( 100vw - 15% );
+      height: calc( 100vh - 70px );
       position: absolute;
       right: 0;
+      overflow-x: hidden;
   }
   /* UTILITY */
   .uppercase {
@@ -48,7 +49,7 @@ body {
   }
   /* MAIN */
 .main-top-fixed {
-    width: calc( 100vw - 15% );
+    width: 100%;
     height: 70px;
     background-color: #080B12;
     display: flex;
@@ -79,7 +80,10 @@ body {
 }
 
 .invisible {
+    width: calc(100vw - 18%);
     height: 70px;
+    display: flex;
+    justify-content: flex-end
 
     /* CATEGORIE */
 }
@@ -96,7 +100,6 @@ body {
     margin-top: 10px;
 }
 #categorie li {
-    flex-direction: column;
     margin: 0 10px;
 }
 #categorie a {
@@ -121,6 +124,9 @@ body {
 }
 
 /* PLAYLIST */
+#playlist {
+    width: 100%;
+}
 #playlist .container-flex {
     flex-wrap: wrap;
 }
@@ -133,16 +139,17 @@ body {
     width: 100%;
     margin-left: 10px;
     margin-top: 10px;
+    
 }
 .playlist {
     text-align: center;
-    width: 180px;
+    width: 150px;
     height: auto;
-    margin:5px
+    margin:5px;
 }
 #cards .playlist .card {
     width: 100%;
-    height: 180px;
+    height: 150px;
     background-color:#ADFF2F;
     margin-bottom: 10px;
 }
