prima parte player-footer

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-size: 13px;
 }
 body > * {
     height: 200px;
@@ -29,18 +30,21 @@ aside {
     height: 100%;
     background-color: #000000;
 }
-div[role="app-content"] {
+div[class="app-content"] {
     width: calc(100% - 200px);
     overflow-y: auto;
 }
 footer {
-    background-color:#282828;
+    background: linear-gradient(to right bottom,
+    rgba(40, 40, 40, 1),
+    rgba(40, 40, 40, 0.9));
     height: 80px;
+    width: 100vw;
+    position: fixed;
 }
 
 section {
     margin-bottom: 10px ;
-
     width: 100%;
     background-color: transparent;
 }
@@ -56,13 +60,13 @@ section {
     justify-content: flex-end;
 }
  .upgrade {
-    height: 30px;
+    height: 35px;
     color: #fff;
     font-size: 10px;
     font-weight: 500;
     border: 2px solid #fff;
     background-color: #080B12;
-    padding: 0px 20px;
+    padding: 0px 22px;
     border-radius: 18px;
     margin-right: 20px;
     margin-top: 20px;
@@ -77,7 +81,22 @@ section {
     position: relative;
 }
 .sidebar section {
-    margin-left: 15px;
+    padding-left: 15px;
+}
+
+.home {
+    border-left: 3px solid  #ADFF2F;
+}
+
+.home a,.search a,.library a {
+    color: #fff;
+    text-decoration: none;
+}
+.home a:hover,.search a:hover,.library a:hover {
+    text-decoration: underline;
+}
+.home span:hover,.search span:hover,.library span:hover {
+    opacity: 1;
 }
 .logo {
     color: #fff;
@@ -88,7 +107,6 @@ section {
     color: #fff;
     display: inline-block;
     vertical-align: middle; 
-    
 }
 .logo i {
     font-size: 30px;
@@ -216,16 +234,16 @@ section {
 #playlist .container-flex {
     flex-wrap: wrap;
 }
-#playlist .container-flex h3 {
+ h3 {
     color: #fff;
     margin-top: 30px;
     padding-left: 10px;
 }
-#cards .container-flex {
+.cards .container-flex {
     width: 100%;
     margin-top: 10px;
 }
-#cards h5 a:hover {
+.cards h5 a:hover {
     text-decoration: underline;
 }
 .playlist {
@@ -234,26 +252,33 @@ section {
     height: auto;
     margin:10px;
 }
-#cards .playlist .card img{
+.cards .playlist .card img{
     width: 100%;
     height: 150px;
     margin-bottom: 10px;
+
 }
-#cards .playlist a,
-#cards .playlist span{
+}
+.playlist_2  h3 {
+    color: #fff;
+    margin-top: 30px;
+    padding-left: 10px;
+}
+.cards .playlist a,
+.cards .playlist span{
     text-decoration: none;
     color: #fff;
     opacity: 1;
 }
-#cards .playlist span {
+.cards .playlist span {
     font-size: 10px;
     opacity: 0.6;
 }
-#playlist_2 .container-flex{
+.playlist_2 .container-flex{
     display: flex;
     flex-direction: column;
 }
-#playlist_2 span {
+.playlist_2 span {
     color: #fff;
     margin-left: 15px;
     font-size: 12px;
@@ -262,6 +287,61 @@ section {
     margin-bottom: 10px;
 }
 
-.br img{
+.br-50 img{
     border-radius: 50%;
+}
+.br img {
+    border-radius: 5px;
+}
+
+
+/* FOOTER */
+
+footer .container-flex  {
+    height: 80px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    color: #fff;
+   
+}
+
+.card-player {
+    display: flex;
+    width: 50px;
+    height: 50px;
+    background-color: red;
+    margin-left: 10px;
+   
+}
+.card-player img  {
+    width: 100%;
+}
+.title {
+    display: flex;
+    flex-direction: column;
+}
+
+.fa-heart, .fa-folder {
+    color: #fff;
+    opacity: 0.6;
+    font-size: 15px;
+   margin-left: 10px;
+}
+.footer h6 {
+    margin-top: 5px;
+    font-size: 10px;
+    margin-left: 10px;
+    
+}
+.footer span  {
+    font-size: 9px;
+    opacity: 0.6;
+    margin-left: 10px;
+}
+.icon-player {
+    display: flex;
+    margin-left: 20px;
+    align-items: center;
+    
 }
