--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -303,23 +303,19 @@ footer .container-flex  {
     align-items: center;
     width: 100%;
     color: #fff;
-   justify-content: space-between;
+    
 }
 
 .card-player {
     display: flex;
-    width: 50px;
+    width: 30%;
     height: 50px;
-    background-color: red;
-    margin-left: 10px;
    
+   flex-wrap: wrap;
+  
 }
 .card-player img  {
-    width: 100%;
-}
-.title {
-    display: flex;
-    flex-direction: column;
+    width: 50px;
 }
 
 .fa-heart, .fa-folder {
@@ -327,6 +323,7 @@ footer .container-flex  {
     opacity: 0.6;
     font-size: 15px;
    margin-left: 10px;
+  
 }
 .footer h6 {
     margin-top: 5px;
@@ -339,17 +336,49 @@ footer .container-flex  {
     opacity: 0.6;
     margin-left: 10px;
 }
-.icon-player {
-    display: flex;
-    margin-left: 20px;
-    align-items: center;
-}
+
 .buttons_player {
-    
-   
-    
+    width: 40%;
+    display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: flex-start;
 }
 .buttons_player i {
-    font-size: 20px;
+    
     margin-right: 10px;
+}
+.card-player a {
+    align-self: center;
+}
+.volume_player {
+    display: flex;
+    justify-content: flex-end;
+    align-content: center;
+}
+.volume_player a {
+    color: #fff;
+   margin-right: 10px;
+   margin-top: 20px;
+}
+.progress_bar {
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    
+    margin-top: 5px;
+}
+.progress_bar div {
+    width: 40%;
+    height: 3px;
+    background-color: #ADFF2F;
+    opacity: 1;
+}
+.progress_2 {
+    width: 30%;
+    margin-right: 10px;
+   margin-top: 30px;
+}
+.fa-play-circle {
+    font-size: 30px;
 }
