--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -346,13 +346,13 @@ footer .container-flex  {
 }
 .buttons_player i {
     font-size: 20px;
-    margin-right: 10px;
+    margin: 0 5px;
 }
 .card-album a {
     align-self: center;
 }
 .volume_player {
-    flex: 1 0 100px;
+    flex: 1 0 150px;
     display: flex;
     justify-content: flex-end;
     align-content: center;
@@ -363,7 +363,7 @@ footer .container-flex  {
    margin-top: 20px;
 }
 .progress_bar {
-    width: 50%;
+    width: 70%;
     height: 2px;
     background-color: #fff;
     margin-top: 8px;
@@ -461,7 +461,13 @@ footer .container-flex  {
         display: flex;
         flex: 1 0 50px;
         flex-wrap: wrap;
-  
+    }
+    .card-album img {
+        margin-top: 10px;
+    }
+    .buttons_player i {
+        font-size: 18px;
+        
     }
     .buttons_player {
         flex: 2 0 150px;
