--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -76,6 +76,7 @@ section {
 .upgrade:hover {
     background-color: #03c03c;  
     border: 2px solid #000;
+    padding: 0px 25px;
     transition: ease 1s;
     cursor: pointer;
 }
@@ -258,7 +259,21 @@ section {
     width: 100%;
     height: 150px;
     margin-bottom: 10px;
-
+}
+.card {
+    position: relative;
+}
+.hover-plus {
+    color: #03c03c;
+    font-size: 40px;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    opacity: 0;
+}
+.card:hover .hover-plus {
+    opacity: 1;
 }
 }
 .playlist_2  h3 {
@@ -345,7 +360,7 @@ footer .container-flex  {
    justify-content: flex-start;
 }
 .buttons_player i {
-    font-size: 20px;
+    font-size: 25px;
     margin: 0 5px;
 }
 .card-album a {
@@ -363,7 +378,7 @@ footer .container-flex  {
    margin-top: 20px;
 }
 .progress_bar {
-    width: 70%;
+    width: 65%;
     height: 2px;
     background-color: #fff;
     margin-top: 8px;
@@ -372,10 +387,33 @@ footer .container-flex  {
 .progress_bar div {
     width: 40%;
     height: 3px;
-    background-color: #03c03c;
+    background-color: gray;
     opacity: 1;
 }
+.container_prog:hover .progress_bar div {
+    width: 40%;
+    height: 3px;
+    background-color: #03c03c;
+    opacity: 1;
+    cursor: pointer;
+}
+.container_prog {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+.container_prog span {
+    opacity: 1;
+    margin-right: 8px;
+}
+
 .progress_2 div {
+    width: 40%;
+    height: 3px;
+    background-color: gray;
+    opacity: 1;
+}
+.progress_2 div:hover {
     width: 40%;
     height: 3px;
     background-color: #03c03c;
@@ -389,7 +427,7 @@ footer .container-flex  {
    margin-top: 30px;
 }
 .fa-play-circle {
-    font-size: 30px;
+    font-size: 40px;
 }
 
 
@@ -426,9 +464,7 @@ footer .container-flex  {
     .sidebar hr {
         display: none;
     }
-    .sidebar .logo i {
-        padding: 0;
-    }
+    
     .playlist {
         text-align: center;
         width: 110px;
