--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -264,8 +264,8 @@ section {
     position: relative;
 }
 .hover-plus {
-    color: #03c03c;
-    font-size: 40px;
+    color: #fff;
+    font-size: 50px;
     position: absolute;
     top: 45%;
     left: 50%;
@@ -273,7 +273,8 @@ section {
     opacity: 0;
 }
 .card:hover .hover-plus {
-    opacity: 1;
+    opacity: 0.9;
+    cursor: pointer;
 }
 }
 .playlist_2  h3 {
@@ -325,19 +326,26 @@ footer .container-flex  {
 
 .card-album {
     display: flex;
-    flex: 1 0 150px;
+    flex: 1 0 200px;
     flex-wrap: wrap;
     margin-left: 10px;
 }
 .card-album img  {
     width: 50px;
 }
-
+.icon_album {
+    display: flex;
+    align-content: center;
+}
+.icon_album i:hover{
+    color: #03c03c;
+    cursor: pointer;
+}
 .fa-heart, .fa-folder {
     color: #fff;
     opacity: 0.6;
     font-size: 15px;
-   margin-left: 10px;
+    margin-left: 10px;
   
 }
 .footer h6 {
@@ -359,9 +367,26 @@ footer .container-flex  {
    align-items: center;
    justify-content: flex-start;
 }
+
 .buttons_player i {
-    font-size: 25px;
     margin: 0 5px;
+    opacity: 0.7;
+}
+.fa-random {
+    font-size: 20px;
+}
+.fa-step-backward,.fa-step-forward {
+    font-size: 25px;
+}
+.fa-play-circle {
+    font-size: 30px;
+}
+.fa-redo-alt {
+    font-size: 20px;
+}
+.buttons_player i:hover {
+    color: #03c03c;
+    cursor: pointer;
 }
 .card-album a {
     align-self: center;
@@ -377,6 +402,7 @@ footer .container-flex  {
    margin-right: 10px;
    margin-top: 20px;
 }
+
 .progress_bar {
     width: 65%;
     height: 2px;
@@ -412,24 +438,22 @@ footer .container-flex  {
     height: 3px;
     background-color: gray;
     opacity: 1;
+    
 }
 .progress_2 div:hover {
     width: 40%;
     height: 3px;
     background-color: #03c03c;
     opacity: 1;
+    cursor: pointer;
 }
 .progress_2 {
     height: 2px;
     background-color: #fff;
     width: 25%;
     margin-right: 15px;
-   margin-top: 30px;
+    margin-top: 30px;
 }
-.fa-play-circle {
-    font-size: 40px;
-}
-
 
 
 /* MEDIA QUERIES */
@@ -477,7 +501,18 @@ footer .container-flex  {
         height: 110px;
         margin-bottom: 10px;
     }
-    
+    .fa-random {
+        font-size: 15px;
+    }
+    .fa-step-backward,.fa-step-forward {
+        font-size: 20px;
+    }
+    .fa-play-circle {
+        font-size: 25px;
+    }
+    .fa-redo-alt {
+        font-size: 15px;
+    }
     
     #playlist .container-flex {
         flex-wrap: wrap;
@@ -501,10 +536,8 @@ footer .container-flex  {
     .card-album img {
         margin-top: 10px;
     }
-    .buttons_player i {
-        font-size: 18px;
-        
-    }
+    
+    
     .buttons_player {
         flex: 2 0 150px;
         display: flex;
